<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/row_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:gravity="center_vertical"
    android:maxHeight="90dp">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="avatar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/placeholder_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/address"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_address"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:paddingLeft="5dp"
        android:text="@string/placeholder_temperature"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        android:text="@string/placeholder_humidity"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintEnd_toStartOf="@+id/luminosity"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/luminosity"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        android:text="@string/placeholder_lux"
        app:layout_constraintStart_toEndOf="@+id/humidity"
        app:layout_constraintTop_toBottomOf="@+id/name" />/>

    <TextView
        android:id="@+id/accX"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:paddingLeft="5dp"
        android:text="@string/placeholder_acc"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <TextView
        android:id="@+id/accY"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/placeholder_acc"
        app:layout_constraintEnd_toStartOf="@+id/luminosity"
        app:layout_constraintStart_toEndOf="@+id/accX"
        app:layout_constraintTop_toBottomOf="@+id/humidity" />

    <TextView
        android:id="@+id/accZ"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/placeholder_acc"
        app:layout_constraintStart_toEndOf="@+id/accY"
        app:layout_constraintTop_toBottomOf="@+id/luminosity" />/>

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:paddingLeft="5dp"
        android:text="@string/placeholder_time"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/timestamp"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
        app:layout_constraintTop_toBottomOf="@+id/accX" />

    <TextView
        android:id="@+id/rssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_rssi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder_timestamp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
